--- a/_posts/2019-4-23-go-array.md
+++ b/_posts/2019-4-23-go-array.md
@@ -16,6 +16,27 @@ description: 数组
 9. 数组指针*[n]T
 
 
+#### array 特点：
+1. 固定长度
+2. golang 中的数组是值类型，也就是说，如果一个数组赋值给另一个数组，那么实际上就是整个数组拷贝了一份；
+3. 如果golang中的数组作为函数的参数，那么实际传递的参数是一份数组拷贝，而不是数组的指针；
+
+
+#### slice：
+1. slice是一个引用类型，是一个动态的指向数组切片的指针；
+2. slice是一个不定长的，总是指向底层的数组array的数据结构
+
+#### Demo:
+1. 创建slice
+动态数组创建，类似创建数组，但是没有固定长度
+```
+var al []int  //创建slice
+sl := make([]int, 10) //创建有10个元素的slice
+sl := []int{1,2,3} //创建有初始化元素的slice
 ```
 
+2. 先创建数组，再建立slice
+```
+var array = [6]int{1,2,3，4，5，6} // 数组固定长度
+sl:= array[2:4] // 创建3个元素的slice
 ```
