--- a/_posts/2019-4-25-go-map.md
+++ b/_posts/2019-4-25-go-map.md
@@ -1,6 +1,6 @@
 
 ---
-layout:     post
+layout:		post
 title:      golang--map
 category: blog
 description: map
@@ -36,3 +36,38 @@ func main(){
 }
 
 ```
+
+函数len返回当前键值对数量，cap不接受字典类型。因内存访问安全和哈希算法等，字典被设计成not addressable, 故不能直接修改value成员（结构或数组）.
+
+
+```
+
+type user struct {
+	name 	string
+	age 	byte
+}
+
+func main(){
+	m := map[int]user{
+		1: {"Tom", 19},
+	}
+	u := m[1]
+	u.age += 1
+	m[1] = u
+
+	m2 := map[int]*user{
+		1 : &user{"Jack", 20},
+	}
+	m2[1].age++
+}
+
+```
+
+
+
+
+
+
+
+
+
